[gd_scene load_steps=12 format=3 uid="uid://bkdxj5qgn8owt"]

[ext_resource type="Script" path="res://Zombie.gd" id="1_zombie"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_zombie"]
radius = 0.7
height = 2.8

[sub_resource type="BoxMesh" id="BoxMesh_body"]
size = Vector3(1.2, 1.8, 0.6)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_body"]
albedo_color = Color(0.2, 0.3, 0.15, 1.0)
roughness = 0.95
metallic = 0.05
emission_enabled = true
emission = Color(0.1, 0.15, 0.05, 1.0)

[sub_resource type="SphereMesh" id="SphereMesh_head"]
radius = 0.45
height = 0.9

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_head"]
albedo_color = Color(0.25, 0.35, 0.2, 1.0)
roughness = 0.98
metallic = 0.02
emission_enabled = true
emission = Color(0.08, 0.12, 0.04, 1.0)

[sub_resource type="BoxMesh" id="BoxMesh_arm"]
size = Vector3(0.3, 1.2, 0.3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_arm"]
albedo_color = Color(0.15, 0.25, 0.1, 1.0)
roughness = 0.98
metallic = 0.02
emission_enabled = true
emission = Color(0.05, 0.08, 0.02, 1.0)

[sub_resource type="BoxMesh" id="BoxMesh_leg"]
size = Vector3(0.35, 1.3, 0.35)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_leg"]
albedo_color = Color(0.12, 0.2, 0.08, 1.0)
roughness = 0.99
metallic = 0.01
emission_enabled = true
emission = Color(0.03, 0.05, 0.01, 1.0)

[sub_resource type="BoxMesh" id="BoxMesh_scar"]
size = Vector3(0.05, 0.3, 0.02)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_scar"]
albedo_color = Color(0.6, 0.1, 0.1, 1.0)
roughness = 0.7
metallic = 0.1
emission_enabled = true
emission = Color(0.2, 0.05, 0.05, 1.0)

[sub_resource type="SphereMesh" id="SphereMesh_eye"]
radius = 0.08
height = 0.15

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eye"]
albedo_color = Color(0.8, 0.1, 0.1, 1.0)
roughness = 0.1
metallic = 0.2
emission_enabled = true
emission = Color(1.0, 0.2, 0.2, 1.0)
emission_energy = 2.0

[sub_resource type="BoxMesh" id="BoxMesh_mouth"]
size = Vector3(0.15, 0.05, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mouth"]
albedo_color = Color(0.1, 0.05, 0.05, 1.0)
roughness = 0.8
metallic = 0.1

[node name="Zombie" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_zombie")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
radius = 0.5
height = 2.0
path_desired_distance = 0.5
target_desired_distance = 1.0

[node name="ZombieModel" type="Node3D" parent="."]

[node name="Body" type="MeshInstance3D" parent="ZombieModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("BoxMesh_body")
material_override = SubResource("StandardMaterial3D_body")

[node name="Head" type="MeshInstance3D" parent="ZombieModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
mesh = SubResource("SphereMesh_head")
material_override = SubResource("StandardMaterial3D_head")

[node name="LeftEye" type="MeshInstance3D" parent="ZombieModel/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.1, 0.1, -0.25)
mesh = SubResource("SphereMesh_eye")
material_override = SubResource("StandardMaterial3D_eye")

[node name="RightEye" type="MeshInstance3D" parent="ZombieModel/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1, 0.1, -0.25)
mesh = SubResource("SphereMesh_eye")
material_override = SubResource("StandardMaterial3D_eye")

[node name="Mouth" type="MeshInstance3D" parent="ZombieModel/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, -0.3)
mesh = SubResource("BoxMesh_mouth")
material_override = SubResource("StandardMaterial3D_mouth")

[node name="LeftArm" type="MeshInstance3D" parent="ZombieModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.2, 0)
mesh = SubResource("BoxMesh_arm")
material_override = SubResource("StandardMaterial3D_arm")

[node name="RightArm" type="MeshInstance3D" parent="ZombieModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.2, 0)
mesh = SubResource("BoxMesh_arm")
material_override = SubResource("StandardMaterial3D_arm")

[node name="LeftLeg" type="MeshInstance3D" parent="ZombieModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, -1.05, 0)
mesh = SubResource("BoxMesh_leg")
material_override = SubResource("StandardMaterial3D_leg")

[node name="RightLeg" type="MeshInstance3D" parent="ZombieModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, -1.05, 0)
mesh = SubResource("BoxMesh_leg")
material_override = SubResource("StandardMaterial3D_leg")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_zombie")

[node name="HealthBar3D" type="ProgressBar" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -40.0
offset_right = 25.0
offset_bottom = -30.0
max_value = 50.0
value = 50.0

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
